--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -54,8 +54,14 @@
     <div class="space-y-2 pt-4">
       <p class="font-medium">Diseño UX/UI</p>
       <p class="text-sm text-gray-600">Toulouse Lautrec</p>
+      <p class="text-sm text-gray-600">2023</p>
+    
+    </div>
+    <div class="space-y-2 pt-4">
+      <p class="font-medium">Inteligencia de Negocios y Análisis de Datos</p>
+      <p class="text-sm text-gray-600">Cibertec</p>
       <p class="text-sm text-gray-600">2024</p>
-      
+    
     </div>
   </div>
 <div class=" rounded-lg border  bg-white  shadow-md p-6 text-[#7126d9] transition-transform duration-300 ease-in-out transform hover:scale-105">
