--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -8,7 +8,7 @@
   <div>
     <h3 class="text-lg font-bold mb-2 text-[#7126d9]">Información de Contacto</h3>
     <p class="text-m text-gray-700">
-      Llena el formulario y me pondré en contacto contigo lo antes posible!
+      ¡Llena el formulario y me pondré en contacto contigo lo antes posible!
     </p>
     
   </div>
