--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,12 +86,12 @@ import ContactForm from '../components/ContactForm.astro';
             <SkillCard 
               name="Diseño UI/UX" 
               icon="https://img.icons8.com/?size=100&id=21940&format=png&color=7e3bdc"
-              technologies={["Figma", "Sketch", "PhotoShop"]} 
+              technologies={["Figma", "Sketch", "PhotoShop", "Illustrator", "Balsamiq"]} 
             />
             <SkillCard 
               name="Herramientas y Tecnologías" 
               icon="https://img.icons8.com/?size=100&id=14600&format=png&color=7e3bdc"
-              technologies={["Git", "GitHub", "PhotoShop"]} 
+              technologies={["Power BI","Git", "GitHub", "Wordpress", "3D Max"]} 
             />
             <SkillCard 
               name="Base de Datos" 
@@ -167,7 +167,7 @@ import ContactForm from '../components/ContactForm.astro';
             <div class="space-y-4">
               <h2 class="text-5xl font-bold text-[#393456] text-left">Contáctame</h2>
              <div class="w-20 h-1 bg-[#7126d9] mt-2 rounded-full"></div>
-              <p class="mx-auto text-xl pb-5">Para proyectos, colaboraciones o cualquier consulta, no dudes en contactarme!</p>
+              <p class="mx-auto text-xl pb-5">¡Para proyectos, colaboraciones o cualquier consulta, no dudes en contactarme!</p>
             </div>
           </div>
         
